Final efforts to reproduce the google.com page

--- a/index.html
+++ b/index.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Google.com clone</title>
-	<link rel:"stylesheet" type="text/css" href="stylesheet.css"
+	<title>Google.com | Clone(ish)</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
-<body class="hp vasq">
-<div class="ctr-p" id="viewport"></div>
-<div id="doc-info"></div>
-<div id="cst"></div>
-<div class="jhp" id="searchform"></div>
-<div class="content" id="main">
-	<span class="ctr-p" id="body">
+<body class="hp">
 		<center>
-			<div style="height:233px;margin-top:89px" id="lga">
-			<img alt="Google" height="92" id="hplogo" src=images/google2.0.0.jpg>
+			<div style="height:233px;margin-top:89px" id="top">
+			<img alt="Google" id="hplogo" height="80%" src=images/google_mondrian.jpg>
 </div>
-<textarea name="csi" id="csi" style="display=none"></textarea>
-<br>
-<button class="sbico-c" value="Search" aria-label="Google Search" id="mKlEF" name="btnG" type="submit">
-	<button class="sbico-c" value="Search" aria-label="Google Search" id="mKlEF" name="btnG" type="submit">
-	<span class="sbico z1asCe MZy1Rb">
-	</span>
-</button>
-<div style="height:118px"></div>
-<div id="prm-pt" style="margin-top:12px"></div>
-</center>
+<form action="/action_page.rb" target="_blank">
+	<input type="text">
+<br><br><br><br>
+<input type="submit" value="Google Search">
+<input type="submit" value="I'm feeling lucky">
+</form>
+</cemter>
 </span>
-<div class="ctr-p" id="footer"></div>
 <div id="footer"></div>
+<footer style="color:#404040;background-color:#d0d7d5;bottom:0;font-size:12px;height:100px;position:absolute;width:100%">
+	<strong>The World</strong><br><br>
 
+<a href="https://www.theodinproject.com/lessons/html-css" target="_blank">Advertising</a>
+<a href="https://www.theodinproject.com/lessons/html-css" target="_blank">Business</a>
+<a href="https://www.theodinproject.com/lessons/html-css" target="_blank">About</a>
+
+	</footer>
 	</body>
 </html>
