Changed location in footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </span>
 <div id="footer"></div>
 <footer style="color:#404040;background-color:#d0d7d5;bottom:0;font-size:12px;height:100px;position:absolute;width:100%">
-	<strong>The World</strong><br><br>
+	<strong>Planet Earth</strong><br><br>
 
 <a href="https://www.theodinproject.com/lessons/html-css" target="_blank">Advertising</a>
 <a href="https://www.theodinproject.com/lessons/html-css" target="_blank">Business</a>
