Changed size input text field

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<img alt="Google" id="hplogo" height="80%" src=images/google_mondrian.jpg>
 </div>
 <form action="/action_page.rb" target="_blank">
-	<input type="text">
+	<input type="text" class="mytext">
 <br><br><br><br>
 <input type="submit" value="Google Search">
 <input type="submit" value="I'm feeling lucky">
