--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 </cemter>
 </span>
 <div id="footer"></div>
-<footer style="color:#404040;background-color:#d0d7d5;bottom:0;font-size:12px;height:100px;position:absolute;width:100%">
+<footer style="color:#404040;background-color:#f6f6f6;bottom:0;font-size:12px;height:100px;position:absolute;width:100%">
 	<strong>Planet Earth</strong><br><br>
 
-<a href="https://www.theodinproject.com/lessons/html-css" target="_blank">Advertising</a>
-<a href="https://www.theodinproject.com/lessons/html-css" target="_blank">Business</a>
-<a href="https://www.theodinproject.com/lessons/html-css" target="_blank">About</a>
+<a href="#">Advertising</a>
+<a href="#">Business</a>
+<a href="#">About</a>
 
 	</footer>
 	</body>
